--- a/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/edycjadanych_umowa.xhtml
@@ -75,8 +75,8 @@
                                         >
                             <p:ajax event="query" global="false"/>
                         </p:autoComplete>
-                        <p:outputLabel value="nfz" for="nfz1" />
-                        <p:inputText id="nfz1" value="#{umowaView.selected.nfz}" title="nfz}"  required="true"/>
+<!--                        <p:outputLabel value="nfz" for="nfz1" />
+                        <p:inputText id="nfz1" value="#{umowaView.selected.nfz}" title="nfz}"  required="true"/>-->
                         <p:outputLabel value="nie licz FGSP" for="nieliczFGSP1" />
                         <p:selectBooleanCheckbox id="nieliczFGSP1" value="#{umowaView.selected.nieliczFGSP}" />
                         <p:outputLabel value="nie licz FP" for="nieliczFP1" />
@@ -187,8 +187,8 @@
                                         >
                             <p:ajax event="query" global="false"/>
                         </p:autoComplete>-->
-                        <p:outputLabel value="nfz" for="nfz" />
-                        <p:inputText id="nfz" value="#{umowaView.selected.nfz}" title="nfz}"  required="true"/>
+<!--                        <p:outputLabel value="nfz" for="nfz" />
+                        <p:inputText id="nfz" value="#{umowaView.selected.nfz}" title="nfz}"  required="true"/>-->
                         <p:outputLabel value="nie licz FGSP" for="nieliczFGSP" />
                         <p:selectBooleanCheckbox id="nieliczFGSP" value="#{umowaView.selected.nieliczFGSP}" />
                         <p:outputLabel value="nie licz FP" for="nieliczFP" />
