--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_zlecenie.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_zlecenie.xhtml
@@ -132,11 +132,11 @@
                         </f:facet>
                         <h:outputText value="#{itemumowa.kodzawodu.symbolkzis}"/>
                     </p:column>
-                    <p:column style="text-align: center;">
-                        <f:facet name="header">
-                            <h:outputText value="nfz"/>
+                      <p:column width="40" style="text-align: center;">
+                         <f:facet name="header">
+                            <h:outputText value="akt."/>
                         </f:facet>
-                        <h:outputText value="#{itemumowa.nfz}"/>
+                        <p:commandButton icon="pi pi-sun" actionListener="#{umowaView.aktywujUmowe(itemumowa)}" update="north, @(form), EastPracownicy"/>
                     </p:column>
                     <p:column width="40" style="text-align: center;">
                         <f:facet name="header">
@@ -167,7 +167,7 @@
                 </p:dataTable>
             </p:panel>
             <p:contextMenu for="datalist" style="width: 200px;">
-                <p:menuitem value="oznacz jako aktywną" icon="pi pi-star" actionListener="#{umowaView.oznaczjakoaktywna()}" update="@form"/>
+<!--                <p:menuitem value="oznacz jako aktywną" icon="pi pi-star" actionListener="#{umowaView.oznaczjakoaktywna()}" update="@form"/>-->
                 <p:menuitem value="przedłuż umowę" icon="pi pi-step-forward-alt" actionListener="#{umowaView.przedluz()}" update="@form akordeon akordeon:UmowaCreateForm"/>
             </p:contextMenu>
         </h:form>
