--- a/kadry/src/main/webapp/pit/sub/pit.xhtml
+++ b/kadry/src/main/webapp/pit/sub/pit.xhtml
@@ -16,7 +16,7 @@
         </p:commandButton>
     </p:outputPanel>
     <p:outputPanel style="margin: 10px;">
-        <h:form id="KartyWynangrodzenPITForm">
+        <h:form id="KartyWynangrodzenPITForm" styleClass="formpit11">
             <p:dataTable id="datalist" value="#{kartaWynagrodzenView.sumypracownicy}" var="itemkarta"
                          rowKey="#{itemkarta.angaz.id}" rowIndexVar="indexka" 
                          style="height: 350px; overflow-y: scroll;width: 1490px;" emptyMessage="Nie pobrano danych"
@@ -268,7 +268,7 @@
                 <h:outputText value="Nie widze karty! Nie można podpisać deklaracji" rendered="#{podpisView.jestkarta eq false}" style="color: red;"/>
             </p:outputPanel>
              <p:outputPanel>
-            <h:form id="wystawionepit11">
+            <h:form id="wystawionepit11"  styleClass="formpit11">
             <p:dataTable id="datalistwa" value="#{kartaWynagrodzenView.listaPIT11}" var="itempity11"
                          rowKey="#{itempity11.id}" rowIndexVar="indexpity11" 
                          style="height: 450px; width: 1550px; overflow-y:scroll;" emptyMessage="Nie pobrano danych"
