--- a/kadry/src/main/webapp/wydruki/index.xhtml
+++ b/kadry/src/main/webapp/wydruki/index.xhtml
@@ -26,10 +26,10 @@
                                     <p:menuitem icon="pi pi-cloud-download" value="historia" style="width: 150px" action="Historia"/>
                                     <p:menuitem icon="pi pi-calendar-plus" value="kalendarze" style="width: 150px" action="KalendarzeGlobalne"/>
                                      <p:submenu icon="pi pi-users" label="pracownicy" style="width: 150px">
-                                         <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy wykaz" style="width: 150px" action="Pracownikwykaz"/>
-                                         <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy angaże" style="width: 150px" action="Pracownik"/>
-                                         <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy dane" style="width: 150px" action="Pracownikdane"/><p:menuitem icon="pi pi-ellipsis-v" value="pracownicy grupy" style="width: 150px" action="Pracownikgrupy"/>
-                                          <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy alerty" style="width: 150px" action="Pracownikalerty"/><p:menuitem icon="pi pi-ellipsis-v" value="pracownicy aneksy" style="width: 150px" action="Pracownikaneksy"/><p:menuitem icon="pi pi-ellipsis-v" value="pracownicy umowy" style="width: 150px" action="Pracownikumowy"/>
+                                         <p:menuitem icon="pi pi-ellipsis-v" value="lista wszystkich prac." style="width: 150px" action="Pracownikwykaz"/>
+                                         <p:menuitem icon="pi pi-ellipsis-v" value="angaże w firmie bież." style="width: 150px" action="Pracownik"/>
+                                         <p:menuitem icon="pi pi-ellipsis-v" value="dane pracowników" style="width: 150px" action="Pracownikdane"/><p:menuitem icon="pi pi-ellipsis-v" value="grupy do list płac" style="width: 150px" action="Pracownikgrupy"/>
+                                          <p:menuitem icon="pi pi-ellipsis-v" value="alerty - pracownicy" style="width: 150px" action="Pracownikalerty"/><p:menuitem icon="pi pi-ellipsis-v" value="aneksy do umów" style="width: 150px" action="Pracownikaneksy"/><p:menuitem icon="pi pi-ellipsis-v" value="lista aktywnych umów" style="width: 150px" action="Pracownikumowy"/><p:menuitem icon="pi pi-ellipsis-v" value="dni urlopów zatrud." style="width: 150px" action="Pracownikurlopy"/>
                                     </p:submenu>
                                     <p:menuitem icon="pi pi-file" value="umowy" style="width: 150px" action="Umowa"/>
                                     <p:menuitem icon="pi pi-money-bill" value="płace" style="width: 150px" action="Administrator"/>
