--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -36,19 +36,19 @@
                             <h:outputText value="#{itempasek.wiekpasek}" style="color: #009688;"/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="brutto z zus"/>
+                            <h:outputText value="z zus"/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="brutto z zus bez pod."/>
+                            <h:outputText value="z zus bez pod."/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="brutto bez społ."/>
+                            <h:outputText value="bez społ."/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="brutto bez zus"/>
+                            <h:outputText value="bez zus"/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="brutto bez zus i pod."/>
+                            <h:outputText value="bez zus i pod."/>
                         </p:column>
                         <p:column style="background-color: #bbc7cd">
                             <h:outputText value="razem brutto" />
