--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_oddelegowanie.xhtml
@@ -36,13 +36,13 @@
                             <h:outputText value="#{itempasek.wiekpasek}" style="color: #009688;"/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="brutto zus kraj"/>
+                            <h:outputText value=" zus kraj"/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="brutto bez zus"/>
+                            <h:outputText value=" bez zus"/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="brutto bez zus i pod."/>
+                            <h:outputText value=" bez zus i pod."/>
                         </p:column>
                         <p:column>
                             <h:outputText value="za oddeleg. w wal."/>
