--- a/kadry/src/main/webapp/kalendarz/sub/kalendarz_globalny.xhtml
+++ b/kadry/src/main/webapp/kalendarz/sub/kalendarz_globalny.xhtml
@@ -32,7 +32,7 @@
                                  selection="#{kalendarzGlobalnyView.selected}" selectionMode="single"
                                  style="height: 150px;overflow-y: scroll; width: 150px; margin-left: 50px;" sortBy="#{itemkalendarzwzorjest.mc}"
                                  >
-                        <p:ajax event="rowSelect" partialSubmit="true" global="false" update="akordeon:KalendarzwzorListGlobForm akordeon:KalendarzGlobalCreateForm:mc akordeon:KalendarzGlobalCreateForm:rok"/>
+                        <p:ajax event="rowSelect" partialSubmit="true" global="true" update="akordeon:KalendarzwzorListGlobForm akordeon:KalendarzGlobalCreateForm:mc akordeon:KalendarzGlobalCreateForm:rok"/>
                         <p:column width="50" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value="utworzono kalendarze za mc"/>
